@@ -301,9 +301,11 @@ sub buildNAMEDData
 			AND
 				`domain_dns`.`domain_type` = ?
 			AND
-				`domain_dns`.`protected` = ?
+				`domain_dns`.`owned_by` = ?
 		";
-		my $rdata = iMSCP::Database->factory()->doQuery('domain_dns_id', $sql, $self->{'domain_id'}, $self->{'alias_id'}, 'MX', 'yes');
+		my $rdata = iMSCP::Database->factory()->doQuery(
+			'domain_dns_id', $sql, $self->{'domain_id'}, $self->{'alias_id'}, 'MX', 'ext_mail_feature'
+		);
 		if(ref $rdata ne 'HASH') {
 			error($rdata);
 			return 1;
